Fix site alignment
I won't be changing the default Vite css from now on.

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@
 }
 
 #root {
-  margin: 0 0;
+  margin: 0 auto;
+  max-width: 1280px;
 }
 
 a {
@@ -30,19 +31,24 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 
   min-width: 320px;
   min-height: 100vh;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border: 4px solid transparent;
+  border-radius: 10px;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-clip: padding-box;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -51,7 +57,7 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 6px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -64,20 +70,5 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
-  }
-}
-
-@media only screen and (min-width: 950px) {
-  #root {
-    margin: 0 100px;
-  }
-
-  header {
-    justify-content: space-around;
-    flex-direction: row;
-  }
-
-  h1 {
-    font-size: 2em;
   }
 }
